<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="4dp"
tools:context=".InfoActivity">

<RelativeLayout
    android:id="@+id/titleLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_toEndOf="@id/title"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/info_button"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="#00FFFFFF"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/my_calculator_app"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold" />

</RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#101010">

        <LinearLayout
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="vertical"
            android:padding="22dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="30dp"
            android:background="#101010"
            android:orientation="vertical">


            <TextView
                android:id="@+id/calculatorDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutMyCalculatorApp"
                android:textSize="16sp"
                android:lineSpacingExtra="6sp"
                android:textColor="@color/white"
                android:paddingBottom="12dp"
                android:layout_marginBottom="18dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>