<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="4dp"
tools:context=".ViewFullHistory">

<RelativeLayout
    android:id="@+id/titleLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_toEndOf="@id/title"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/info_button"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="#00FFFFFF"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/my_calculator_advance"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>


<LinearLayout
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/titleLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="22dp"
    android:layout_margin="10dp"
    android:layout_marginBottom="30dp"
    android:background="#101010"
    android:orientation="vertical">


    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/history"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="normal"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="8dp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/calculatorHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:lines="12"
        android:textSize="22sp"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:lineSpacingExtra="4sp"
        android:text="History will be displayed here"
        android:textColor="@color/splashScreen" />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>